<resources>
    <string name="app_name">Unsplash</string>
    <string name="feed_menu">feed_menu</string>
    <string name="collections_menu">collections_menu</string>
    <string name="profile_menu">profile_menu</string>
    <string name="first_onboarding">Создавайте снимки, публикуйте, собирайте аудиторию, получайте фидбек!</string>
    <string name="auth_canceled">Аутентификация не выполнена</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_onboarding">Делитесь с друзьями, собирайте коллекции</string>
    <string name="third_onboarding">Загружайте любимые снимки и отслеживайте статистику</string>
    <string name="next">Далее</string>
    <string name="finish">Завершить</string>
    <string name="unsplash">войти через unsplash</string>
    <string name="authorization_error">Ошибка авторизации</string>
    <string name="like_count">1110</string>
    <string name="author_name">author_name</string>
    <string name="unsplash_placeholder">\Unsplash</string>
    <string name="server_connection_error">Нет соединения с сетью</string>
    <string name="snack_retry">Повторить</string>
    <string name="snack_updated">Список обновлен</string>
    <string name="share_image_link">Поделиться ссылкой на изображение</string>
    <string name="retry">Повторить</string>
    <string name="no_results">Пусто</string>
    <string name="search_hint">Поиск изображений</string>
    <string name="locationTextView">New York, NY</string>
    <string name="tags">#tags #tags #tags #tags #tags #tags</string>
    <string name="made_with">Снято на: </string>
    <string name="model">Модель: </string>
    <string name="exposure">Экспозиция: </string>
    <string name="aperture">Апертура: </string>
    <string name="focal_length">Фокусное расстояние: </string>
    <string name="about_author">Об авторе @</string>
    <string name="author_description">Dreamer, creator. Strong man, stronger passion.</string>
    <string name="iso">ИСО: </string>
    <string name="download">Скачать (</string>
</resources>