<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shadow_rectangle"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="0dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView" />

    <ImageView
        android:id="@+id/unlikePhotoButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"

        android:src="@drawable/unstarred"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image" />


    <ImageView
        android:id="@+id/likePhotoButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/starred"

        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:text="@string/like_count"
        android:textColor="?attr/colorOnSurface"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/author_name"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/author_login"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/unsplash_placeholder"
        android:textColor="?attr/colorOnSurface"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/author_name" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/image_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="profile_image,like_count,author_name,author_login"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/location"
        android:text="@string/locationTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tagsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <TextView
        android:id="@+id/madeWithTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/made_with"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsTextView" />

    <TextView
        android:id="@+id/modelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madeWithTextView" />

    <TextView
        android:id="@+id/exposureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/exposure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelTextView" />

    <TextView
        android:id="@+id/apertureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/aperture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exposureTextView" />

    <TextView
        android:id="@+id/focalLengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/focal_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apertureTextView" />

    <TextView
        android:id="@+id/isoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/iso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focalLengthTextView" />

    <TextView
        android:id="@+id/aboutAuthorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_author"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tagsTextView" />

    <TextView
        android:id="@+id/authorDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/author_description"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/aboutAuthorTextView" />

    <TextView
        android:id="@+id/downloadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/download"
        app:drawableEndCompat="@drawable/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/photoDetailsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>