<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <ImageView
        android:scaleType="fitCenter"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/no_image"/>

    <ImageView
        android:id="@+id/shadow_rectangle"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="0dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView" />

    <ImageView
        android:id="@+id/unlikePhotoButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/unstarred"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <ImageView
        android:id="@+id/likePhotoButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/starred"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/like_count"
        android:textColor="?attr/colorOnSurface"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/author_name"
        android:textColor="?attr/colorOnSurface"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/author_login"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/unsplash_placeholder"
        android:textColor="?attr/colorOnSurface"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/author_name" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/image_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="profile_image,like_count,author_name,author_login"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>